--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,20 @@ html {
 body {
   font-size: 2.4rem;
   font-family: sans-serif;
-  color: #5a3e2b;
+  color: #2c0b0e;
+  /* color: #5a3e2b; */
   font-family: "Quicksand";
   font-weight: 500;
   height: 100vh;
   background-color: #f0e8e8;
+}
+h1 {
+  padding: 2rem 0 0.5rem;
+}
+form p {
+  font-weight: 600;
+  padding: 1rem 0 0.5rem;
+  font-size: 2rem;
 }
 .center {
   text-align: center;
@@ -43,7 +52,7 @@ h2 {
 }
 .main {
   position: relative;
-  height: 74%;
+  height: 78%;
 }
 .btn {
   position: absolute;
@@ -66,24 +75,60 @@ h2 {
 .completed {
   color: #f93409;
 }
-/* #F93409 
-#fefefe
-#2c0b0e
-*/
-
-/* .scout-container > div {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+.tab-btns {
+  padding: 0 1.4rem;
 }
-.scout-nav {
-  margin-top: 10px;
-  padding: 1.2rem;
-  color: #fefefe;
+.tab-btn {
+  text-align: center;
+  height: 30px;
+  width: 30px;
+  display: inline;
+  border-radius: 50%;
+  border: 3px solid #2c0b0e;
+}
+.tab-btn:not(:last-child):after {
+  display: block;
+  content: "";
+  height: 3px;
+  width: 8.5rem;
+  margin-left: 35px;
   background-color: #2c0b0e;
-  border-radius: 5px;
-  cursor: pointer;
+  position: absolute;
+  top: 40px;
 }
-.selected {
+
+.tab-btn-completed {
   background-color: #f93409;
+  border: none;
+  color: transparent;
+}
+.tab-btn-completed:not(:last-child):after {
+  background-color: #f93409;
+}
+input,
+option,
+select {
+  width: 100%;
+  border-radius: 5px;
+  height: 40px;
+  padding: 0 1.5rem;
+  font-weight: 600;
+  font-size: 1.3rem;
+}
+.submit {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px 40px;
+  padding: 1.5rem 0;
+}
+/* .submit > div {
 } */
+.submit > div > .title {
+  font-size: 1.8rem;
+  font-weight: 600;
+  font-style: italic;
+}
+.submit > div > .descp {
+  font-size: 2rem;
+  padding-left: 1rem;
+}
