--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Bokor&family=Funnel+Display:wght@300..800&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+.bokor-regular {
+  font-family: "Bokor", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
 html {
   font-size: 62.5%;
 }
 
 body {
   font-size: 2.4rem;
-  font-family: sans-serif;
   color: #2c0b0e;
-  /* color: #5a3e2b; */
-  font-family: "Quicksand";
+  font-family: "Funnel Display", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   font-weight: 500;
   height: 100vh;
   background-color: #f0e8e8;
 }
 h1 {
-  padding: 2rem 0 0.5rem;
+  padding: 1rem 0 0.5rem;
 }
 form p {
   font-weight: 600;
@@ -80,8 +85,8 @@ h2 {
 }
 .tab-btn {
   text-align: center;
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
   display: inline;
   border-radius: 50%;
   border: 3px solid #2c0b0e;
@@ -90,11 +95,11 @@ h2 {
   display: block;
   content: "";
   height: 3px;
-  width: 8.5rem;
-  margin-left: 35px;
+  width: 7rem;
+  margin-left: 47px;
   background-color: #2c0b0e;
   position: absolute;
-  top: 40px;
+  top: 50px;
 }
 
 .tab-btn-completed {
@@ -129,6 +134,22 @@ select {
   font-style: italic;
 }
 .submit > div > .descp {
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding-left: 1rem;
+}
+.completed-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.completed-page span {
+  color: #f93409;
+}
+.completed-page p {
+  font-weight: 600;
+}
+.fa-handshake {
+  font-size: 9rem;
 }
