--- a/src/index.css
+++ b/src/index.css
@@ -44,11 +44,8 @@ form p {
 .app {
   margin: 50px auto;
   max-width: 500px;
-}
-
-.container {
-  height: 80vh;
-  padding: 2rem 3rem;
+  height: calc(100vh - 100px);
+  padding: 1rem 3rem;
   border-radius: 10px;
   background-color: #fefefe;
 }
@@ -60,8 +57,7 @@ h2 {
   height: 78%;
 }
 .btn {
-  position: absolute;
-  bottom: 0;
+  margin-top: 2.5rem;
   width: 100%;
   display: flex;
   gap: 0 15px;
@@ -98,8 +94,8 @@ h2 {
   width: 7rem;
   margin-left: 47px;
   background-color: #2c0b0e;
-  position: absolute;
-  top: 50px;
+  position: relative;
+  top: -50%;
 }
 
 .tab-btn-completed {
@@ -108,6 +104,8 @@ h2 {
   color: transparent;
 }
 .tab-btn-completed:not(:last-child):after {
+  position: relative;
+  top: -50%;
   background-color: #f93409;
 }
 input,
